--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,59 @@
-nginx:
-    image: tutum/nginx
-    ports:
-        - "80:80"
-    links:
+version: '2'
+services:
+  web:
+      container_name: web
+      image: nginx:stable-alpine
+      ports:
+        - "8080:80"
+      links:
         - php
-    volumes_from:
-      - webroot
+      volumes_from:
+        - webroot
+      volumes:
+        - ./docker/nginx/default:/etc/nginx/conf.d/default.conf:ro
+      environment:
+        VIRTUAL_HOST: d8.docker
+        VIRTUAL_PROTO: http
 
-php:
-    build: docker/php
-    ports:
+  php:
+      container_name: php
+      build: docker/php
+      ports:
         - "9000:9000"
-    volumes_from:
-      - webroot
+      links:
+        - solr
+        - db
+      volumes_from:
+        - webroot
 
-db:
-  image: mariadb
-  environment:
-    MYSQL_ROOT_PASSWORD: admin
+  db:
+    container_name: db
+    image: mariadb:bionic
+    ports:
+      - "3306:3306"
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: ''
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_USER: drupal
+      MYSQL_PASSWORD: drupal
+      MYSQL_DATABASE: drupal
 
-phpmyadmin:
-  image: phpmyadmin/phpmyadmin
-  restart: always
-  links:
-    - db
-  ports:
-    - 8183:80
-  environment:
-    MYSQL_USERNAME: admin
-    MYSQL_ROOT_PASSWORD: admin
-    PMA_ARBITRARY: 1
+  solr:
+    container_name: solr
+    image: solr:7-alpine
+    ports:
+    - "8983:8983"
+    volumes:
+      - ./docker/solr/core2:/opt/solr/server/solr/core2
 
-webroot:
-  image: tianon/true
-  volumes:
-    - ./docker/nginx/default:/etc/nginx/sites-available/default
-    - ./docker/nginx/default:/etc/nginx/sites-enabled/default
-    - ./docker/logs/nginx-error.log:/var/log/nginx/error.log
-    - ./docker/logs/nginx-access.log:/var/log/nginx/access.log
-    - ./web:/var/www/web
-    - ./vendor:/var/www/vendor
+  webroot:
+    container_name: webroot
+    image: tianon/true
+    volumes:
+      - ./config:/var/www/config
+      - ./load.environment.php:/var/www/load.environment.php
+      - ./docker/nginx/default:/etc/nginx/sites-available/default
+      - ./docker/nginx/default:/etc/nginx/sites-enabled/default
+      - ./web:/var/www/web
+      - ./vendor:/var/www/vendor
